--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "turbo": "^2.5.4",
-    "typescript": "5.8.3",
+    "typescript": "^5.8.3",
     "prettier": "^3.6.2"
   }
 }
