--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -14,10 +14,10 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.8",
     "eslint": "^9.31.0",
-    "typescript": "5.8.2"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "react": "^19.1.0",
