--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "chronof1",
   "private": true,
   "packageManager": "pnpm@9.0.0",
-  "engines": { "node": ">=18" },
-
+  "engines": {
+    "node": ">=18"
+  },
   "workspaces": [
     "apps/api",
     "apps/web",
     "packages/*"
   ],
-
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
@@ -18,8 +18,8 @@
     "check-types": "turbo run check-types"
   },
   "devDependencies": {
-    "turbo": "^2.5.4",
-    "typescript": "^5.8.3",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "turbo": "^2.5.5",
+    "typescript": "^5.8.3"
   }
 }
