--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+      "jsx": "react"
+  },
   "extends": "../../tsconfig.base.json",
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
